# pggraphrag-mcp

./: .env.example  .env.production.example  .rules  Makefile  README.ja.md  README.md  pyproject.toml
.github/workflows/: ci.yml
docker/: docker-compose.small-auth.yml  docker-compose.yml
docker/auth/: Dockerfile
docker/postgres-age/: Dockerfile
docker/private-app/: Dockerfile
docker/traefik/: dynamic.yml  traefik.yml
docs/: README.md  acceptance-criteria.md  docker-layout.md  implementation-plan.md  naming-and-env.md  plan.yaml  release-checklist.md  ticket-status.md
docs/operations/: ci-and-smoke.md  graph-bootstrap.md  schema-apply.md
docs/tickets/: T001-repo-skeleton.md  T002-compose-topology.md  T003-env-and-secrets.md  T004-postgres-image.md  T005-schema-migrations.md  T006-age-bootstrap.md  T007-http-app.md  T008-mcp-tooling-schemas.md  T009-smoke-test.md  T010-document-ingest.md  T011-embedding-pipeline.md  T012-entity-relation-extraction.md  T013-graph-refresh.md  (+7 more)
scripts/: __init__.py  apply_schema.py  bootstrap_graph.py  bootstrap_local_env.py  mcp_http_smoke.py  ops_automation.py
tests/: conftest.py  test_ci_smoke_v1.py  test_ci_smoke_v2.py  test_extraction_quality_v1.py  test_extraction_quality_v2.py  test_graphrag_flow.py  test_hardening_and_release.py  test_http_stack.py  test_integration_suite.py  test_limits_and_safety.py  test_next_phase_pipeline.py  test_ops_automation.py  test_public_surface_snapshot.py  test_remote_embeddings.py  test_reranking_v1.py  test_retrieval_extraction_quality_v3.py  test_retrieval_quality_v2.py
(+23 files in other folders)
