[project]
name = "pggraphrag-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Rio Fujita", email = "rio_github@rio.st" }
]
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115.0",
  "uvicorn[standard]>=0.30.0",
  "pydantic>=2.8.0",
  "pydantic-settings>=2.3.0",
  "psycopg[binary]>=3.2.0",
  "httpx>=0.27.0",
]

[project.scripts]
pggraphrag-mcp = "pggraphrag_mcp:main"
pggraphrag-mcp-http = "pggraphrag_mcp.http_app:main"
pggraphrag-mcp-smoke = "scripts.mcp_http_smoke:main"

[project.optional-dependencies]
test = [
  "pytest>=9",
  "pytest-cov>=7",
  "pytest-asyncio>=0.24.0",
]

[dependency-groups]
dev = [
  "build>=1.2.2",
  "twine>=6.1.0",
  "ruff>=0.12.0",
]

[tool.pytest.ini_options]
markers = [
  "integration: integration and clean-environment workflow tests",
]

[build-system]
requires = ["uv_build>=0.9.27,<0.10.0"]
build-backend = "uv_build"
